# smol-torch

./: .gitignore  CMakeLists.txt  README.md  setup.py  test.py
include/: dtype.h  ops.h  tensor.h
smol-torch/cpython/: python_module.c  python_tensor.c  python_tensor.h
smol-torch/src/: dtype.c  ops.c  tensor.c
src/: smol_torch.c  tensor.c
